<resources>
    <string name="app_name">"Мессенджер"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailETHint">Электронная почта</string>
    <string name="passwordETHint">Пароль</string>
    <string name="registrationBTText">Зарегистрироваться</string>
    <string name="forgotPasswordTVText">Забыл(а) пароль?</string>
    <string name="noAccountTVText">Нет аккаунта?</string>
    <string name="registrationTVText">Зарегистрироваться</string>
    <string name="enterBTText">Войти</string>
    <string name="btnLoginText">Войти</string>
    <string name="tvRegisterText">Зарегистрироваться</string>
    <string name="tvForgotPasswordText">Забыли пароль?</string>
    <string name="tvWelcomeText">Добро пожаловать!</string>
    <string name="etEmailHint">Email</string>
    <string name="etPasswordHint">Пароль</string>
    <string name="tvRegisterWelcomeText">Регистрация</string>
    <string name="etRegisterEmailHint">Email</string>
    <string name="etRegisterPasswordHint">Пароль</string>
    <string name="etRegisterConfirmPasswordHint">Подтвердите пароль</string>
    <string name="btnRegisterText">Зарегистрироваться</string>
    <string name="menu_profile_title">Профиль</string>
    <string name="menu_about_title">О приложении</string>
    <string name="menu_exit_title">Выход</string>
    <string name="nameETHint">Имя</string>
    <string name="surnameETHint">Фамилия</string>
    <string name="craftETHint">Род занятий</string>
    <string name="ageETHint">Возраст</string>
    <string name="cityETHint">Город</string>
    <string name="saveBTHint">Сохранить</string>
    <string name="sendBTText">Send</string>
    <string name="type_a_message_hint">Введите сообщение</string>
    <string name="btnSenResetEmailText">Отправить письмо</string>
    <string name="ci_description">Добавить фото</string>
</resources>