<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editImageProductIV"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_200dp"
        android:layout_margin="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_person"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editImageProductIV"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameET"
            android:layout_width="@dimen/_350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/nameETHint"/>

        <EditText
            android:id="@+id/surnameET"
            android:layout_width="@dimen/_350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/surnameETHint"/>

        <EditText
            android:id="@+id/craftET"
            android:layout_width="@dimen/_350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/craftETHint"/>

        <EditText
            android:id="@+id/ageET"
            android:layout_width="@dimen/_350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/ageETHint"/>

        <EditText
            android:id="@+id/cityET"
            android:layout_width="@dimen/_350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/cityETHint"/>

        <Button
            android:id="@+id/saveBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_gravity="center"
            android:text="@string/saveBTHint"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>